--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,12 +4,12 @@
   font-family: 'Inter Tight', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
 
 /* webkit solution */
@@ -32,12 +32,11 @@ a:hover {
 }
 
 body {
-  background: #ECF0F1;
+  background: #645557;
   background-size: cover;
   background-repeat: no-repeat no-repeat;
   background-position: center center;
   margin: 0;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -54,7 +53,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #dddddde2;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -105,7 +104,7 @@ tbody tr:nth-child(odd) {
 }
 
 .nav-title a {
-  color: #b864c4;
+  color: #1276d3;
 }
 
 .nav-item {
@@ -147,15 +146,15 @@ tbody tr:nth-child(odd) {
 }
 
 .todo {
-  background-color: #e9cbec;
+  background-color: #f4ebd9ef;
 }
 
 .inprogress {
-  background-color: #b864c4;
+  background-color: #a39a92e9;
 }
 
 .done {
-  background-color: #732381;
+  background-color: #77685dec;
 }
 
 .ticket-card {
@@ -181,18 +180,19 @@ tbody tr:nth-child(odd) {
 
 
 .form {
-  width: 60%;
-  height: 80%;
-  background-color: #b864c4;
+  width: 500px;
+  height: auto;
+  background-color: #f4ebd9ef;
   margin: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: start;
+  align-items: left;
+  padding: 3.0%;
 }
 
 .form > h1, .form > label {
-  color: yellow;
+  color: #000000;
 }
 
 .form > input {
@@ -207,6 +207,9 @@ tbody tr:nth-child(odd) {
 
 .form button {
   margin-top: 2.5%;
+  width: 200px;
+  color: #000000;
+  background-color: #ffffff;
 }
 
 .form textarea {
@@ -216,7 +219,7 @@ tbody tr:nth-child(odd) {
 }
 
 .editBtn {
-  background-color: #f9f9f9;
+  background-color: #d2d3ddef;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -225,7 +228,7 @@ tbody tr:nth-child(odd) {
 }
 
 .deleteBtn {
-  background-color: #f9f9f9;
+  background-color: #d2d3ddef;
   font-weight: 500;
   color: black;
   text-decoration: inherit;
